--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@18f/identity-design-system": "^8.0.1",
     "@react-google-maps/api": "^2.19.2",
     "@trussworks/react-uswds": "^5.0.0",
     "@uswds/uswds": "3.1.0",
